apps/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: media

spec:
  replicas: 1

  strategy:
    type: Recreate

  selector:
    matchLabels:
      app.kubernetes.io/name: prowlarr

  template:
    metadata:
      labels:
        app.kubernetes.io/name: prowlarr

    spec:
      containers:
        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr:2.5.2.5491-ls156
          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 9696
              protocol: TCP

          volumeMounts:
            - name: config
              mountPath: /config

          resources:
            requests:
              cpu: 50m
              memory: 128Mi

            limits:
              cpu: 500m
              memory: 512Mi

          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30

      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: prowlarr-config
