apps/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media

spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: prowlarr

  ports:
    - name: http
      port: 9696
      targetPort: http
