apps/prowlarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  namespace: media

  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - prowlarr.apps.bubudog.net
      secretName: prowlarr-tls

  rules:
    - host: prowlarr.apps.bubudog.net

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: prowlarr
                port:
                  number: 9696
